--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1869,16 +1869,16 @@ a {
 .cid-tcc1abG56t form.mbr-form .mbr-section-btn .btn {
   width: 100%;
 }
-.cid-tccfuqitUx {
+.cid-u3R4A3IWaS {
   padding-top: 6rem;
   padding-bottom: 6rem;
   background-color: #ffffff;
 }
-.cid-tccfuqitUx img {
+.cid-u3R4A3IWaS img {
   width: 120px;
   margin: auto;
 }
-.cid-tccfuqitUx .card {
+.cid-u3R4A3IWaS .card {
   transition: all 0.3s;
   height: fit-content;
   padding: 1rem 0;
@@ -1886,7 +1886,7 @@ a {
   margin-bottom: 1rem;
 }
 @media (min-width: 992px) {
-  .cid-tccfuqitUx .card {
+  .cid-u3R4A3IWaS .card {
     max-width: 12.5%;
   }
 }
